--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
+    "autoprefixer": "^10.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "postcss": "^8.1.10",
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.1.0",
