--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "postcss": "^8.1.10",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "vue-json-pretty": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.1.0",
