--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/pwa": "^3.0.2",
     "autoprefixer": "^10.0.2",
     "core-js": "^3.6.5",
+    "node-json-db": "^1.1.0",
     "nuxt": "^2.14.6",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.0.1",
