--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxt/content": "^1.9.0",
     "@nuxt/http": "^0.6.1",
     "@nuxtjs/axios": "^5.12.2",
@@ -18,9 +22,12 @@
     "core-js": "^3.6.5",
     "node-json-db": "^1.1.0",
     "nuxt": "^2.14.6",
+    "nuxt-fontawesome": "^0.4.0",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.0.1",
-    "vue-json-pretty": "^2.0.0"
+    "v-tooltip": "^2.0.3",
+    "vue-json-pretty": "^2.0.0",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.1.0",
